--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <script src="//fb.me/react-0.11.0.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/JSXTransformer.js"></script>
-  <script src="gof.js" type="text/jsx"></script>
+  <script src="gol.js" type="text/jsx"></script>
+  <link href="gol.css" type="text/css" rel="stylesheet" />
   <meta charset="utf-8">
   <title>GoL React</title>
 </head>
