--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="//fb.me/react-0.11.0.js"></script>
+  <script src="//fb.me/react-with-addons-0.12.0.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/JSXTransformer.js"></script>
   <script src="gol.js" type="text/jsx"></script>
   <link href="gol.css" type="text/css" rel="stylesheet" />
