--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="//fb.me/react-with-addons-0.12.0.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/JSXTransformer.js"></script>
-  <script src="bundle.js" type="text/jsx"></script>
-  <link href="gol.css" type="text/css" rel="stylesheet" />
+  <script src="js/bundle.js" type="text/jsx"></script>
+  <link href="css/gol.css" type="text/css" rel="stylesheet" />
   <meta charset="utf-8">
   <title>GoL React</title>
 </head>
